--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -168,7 +168,62 @@
       {{errorMessage}}
     </div>
     <div class="excel-body" *ngIf="!isLoading">
-      <table class="excel-table mobile-optimized">
+      <!-- Desktop Table - Full Columns -->
+      <table class="excel-table desktop-table" *ngIf="!isMobile">
+        <thead>
+          <tr>
+            <th class="col-factory">Factory</th>
+            <th class="col-index">#</th>
+            <th class="col-date">Ngày xuất</th>
+            <th class="col-material">Mã hàng</th>
+            <th class="col-po">Số PO</th>
+            <th class="col-batch">Batch</th>
+            <th class="col-quantity">Xuất</th>
+            <th class="col-employee">Mã nhân viên</th>
+            <th class="col-production">Lệnh sản xuất</th>
+            <th class="col-delete">Xóa</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let material of getPaginatedMaterials(); let i = index">
+            <td class="factory-cell readonly-cell">
+              {{material.factory || 'ASM1'}}
+            </td>
+            <td class="index-cell readonly-cell">
+              {{i + 1}}
+            </td>
+            <td class="date-cell readonly-cell">
+              {{material.createdAt | date:'dd/MM/yyyy HH:mm'}}
+            </td>
+            <td class="code-cell readonly-cell">
+              {{material.materialCode}}
+            </td>
+            <td class="po-cell readonly-cell">
+              {{material.poNumber}}
+            </td>
+            <td class="batch-cell readonly-cell">
+              {{material.batchNumber || 'N/A'}}
+            </td>
+            <td class="number-cell readonly-cell">
+              {{material.exportQuantity}}
+            </td>
+            <td class="employee-cell readonly-cell">
+              {{material.employeeId || 'N/A'}}
+            </td>
+            <td class="production-order-cell readonly-cell">
+              {{material.productionOrder || 'N/A'}}
+            </td>
+            <td class="delete-cell">
+              <button class="delete-btn" (click)="deleteMaterial(material)" title="Xóa">
+                <i class="material-icons">delete</i>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!-- Mobile Table - 4 Columns Only -->
+      <table class="excel-table mobile-optimized" *ngIf="isMobile">
         <thead>
           <tr>
             <th class="col-material">Mã hàng</th>
