--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -71,6 +71,13 @@
               <i class="material-icons">done</i>
               <span>Done</span>
             </button>
+            <button class="stop-camera-btn-mobile" 
+                    (click)="stopCameraScanning()"
+                    title="Tắt camera"
+                    *ngIf="isMobile && selectedScanMethod === 'camera'">
+              <i class="material-icons">videocam_off</i>
+              <span>Tắt Camera</span>
+            </button>
           </div>
         </div>
         
