--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -25,7 +25,7 @@
             </button>
             <button class="start-btn-mobile" 
                     [disabled]="!selectedScanMethod"
-                    (click)="isMobile && selectedScanMethod === 'camera' ? startCameraScanning() : startBatchScanningMode()"
+                    (click)="console.log('🚀 Start button clicked:', {isMobile, selectedScanMethod, willCall: isMobile && selectedScanMethod === 'camera' ? 'startCameraScanning()' : 'startBatchScanningMode()'}); isMobile && selectedScanMethod === 'camera' ? startCameraScanning() : startBatchScanningMode()"
                     title="Bắt đầu chế độ scan">
               <i class="material-icons">play_arrow</i>
               <span>Start</span>
