--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -34,7 +34,7 @@
         </div>
 
         <!-- Scanner Input for Batch Mode -->
-        <div class="scanner-input-group" [class.mobile-hidden]="isMobile && selectedScanMethod === 'camera'">
+        <div class="scanner-input-group" [class.mobile-hidden]="selectedScanMethod === 'camera'">
           <input type="text" 
                  #scannerInput
                  [(ngModel)]="scannerBuffer"
