--- a/src/app/pages/outbound-asm1/outbound-asm1.component.html
+++ b/src/app/pages/outbound-asm1/outbound-asm1.component.html
@@ -25,7 +25,7 @@
             </button>
             <button class="start-btn-mobile" 
                     [disabled]="!selectedScanMethod"
-                    (click)="console.log('🚀 Start button clicked:', {selectedScanMethod, willCall: selectedScanMethod === 'scanner' ? 'startBatchScanningMode()' : 'startCameraScanning()'}); selectedScanMethod === 'scanner' ? startBatchScanningMode() : startCameraScanning()"
+                    (click)="debugStartButton(); selectedScanMethod === 'scanner' ? startBatchScanningMode() : startCameraScanning()"
                     title="Bắt đầu chế độ scan">
               <i class="material-icons">play_arrow</i>
               <span>Start</span>
